# free-searches-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test-python-google.py
app/: anonymity.py  client.py  config.py  default_config.yaml  google_search.py  router.py
