[tool.poetry]
name = "free-searches-api"
version = "0.1.0"
description = ""
authors = ["fmaret <maret.florent59@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
requests = {extras = ["socks"], version = "^2.28.1"}
fake-useragent = "^0.1.11"
envyaml = "^1.10.211231"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
